<?xml version="1.0"?>
<package format="2">
  <name>hello_pkg</name>
  <version>0.0.0</version>
  <description>The hello_pkg package</description>

  
  <maintainer email="kch20@student.aau.dk">Kristoffer Bundgaard Christensen</maintainer>


  
  <license>MIT</license>


  <author email="kch20@student.aau.dk">Kristoffer Bundgaard Christensen</author> -->


  <buildtool_depend>catkin</buildtool_depend>
 <depend>roscpp</depend>

  
  <export>


  </export>
</package>
